# chrono

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  AGENTS.md  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CUDA13_PATCHES.md  ChContinuumPoissonFlow3D.h  ChFlow3D.h  ChOgre.h  ChronoModernCmake.txt  HOWTO_COMPILE_API.txt  LICENSE  PLATFORMS.md  README.md  RELEASENOTES.md  _config.yml  appveyor.yml  benchmark_testing_HOWTO.txt  index.html  license.txt  make-unit_MPI  readme.txt  run_MultiPhaseFlow_3D.cpp
contrib/opencrg-support/: CMakeLists.txt  README.md  crg_howto.txt
src/: CMakeLists.txt  CTestConfig.cmake  ChConfig.h.in  ChVersion.h.in  HOWTO_COMPILE_API.txt  Mbuild_all_sdk.bat  Mobjdelete_all.bat  Render.py  __template_ChronoEngine.vcproj  make-chrono_lib  make-chrono_lib.linux  nvcc_compile.bat  plugins.cfg
src/assets/: ChAsset.cpp  ChAsset.h  ChAssetLevel.cpp  ChAssetLevel.h  ChBoxShape.cpp  ChBoxShape.h  ChCamera.cpp  ChCamera.h  ChCapsuleShape.cpp  ChCapsuleShape.h  ChColor.h  ChColorAsset.cpp  ChColorAsset.h  ChConeShape.cpp  ChConeShape.h  ChCylinderShape.cpp  ChCylinderShape.h  ChEllipsoidShape.cpp  ChEllipsoidShape.h  ChEmitterAsset.cpp  ChGlyphs.cpp  ChGlyphs.h  ChLineShape.cpp  ChLineShape.h  ChMaterial.h  ChObjShapeFile.cpp  ChObjShapeFile.h  ChPathShape.cpp  ChPathShape.h  ChRoundedBoxShape.cpp  ChRoundedBoxShape.h  ChRoundedConeShape.cpp  ChRoundedConeShape.h  ChRoundedCylinderShape.cpp  ChRoundedCylinderShape.h  ChSphereShape.cpp  ChSphereShape.h  ChTexture.cpp  ChTexture.h  ChTriangleMeshShape.cpp  (+3 more)
src/chjs/: ChControlsJS.cpp  ChFunctionJS.cpp  ChFunctionJS.h  ChFxJavascript.cpp  ChFxJavascript.h  ChGlobalJS.cpp  ChGlobalJS.h  ChJs_Engine.cpp  ChJs_Engine.h  ChJs_all.cpp  ChJs_all.h  ChJs_body.cpp  ChJs_body.h  ChJs_constraint.cpp  ChJs_constraint.h  ChJs_controller.cpp  ChJs_force.cpp  ChJs_force.h  ChJs_funct.cpp  ChJs_geometry.cpp  ChJs_impact.cpp  ChJs_impact.h  ChJs_link.h  ChJs_marker.cpp  ChJs_marker.h  ChJs_math.cpp  ChJs_optimizer.cpp  ChJs_system.cpp  ChJs_system.h  ChJs_utils.cpp  ChOptvar.cpp  ChOptvar.h
src/chrono/: CMakeLists.txt  ChConfig.h.in  ChVersion.h.in
src/chrono_cascade/: CMakeLists.txt  ChApiCASCADE.h  ChBodyEasyCascade.cpp  ChBodyEasyCascade.h  ChCascadeBodyEasy.cpp  ChCascadeBodyEasy.h  ChCascadeDoc.cpp  ChCascadeDoc.h  ChCascadeIrrMeshTools.cpp  ChCascadeIrrMeshTools.h  ChCascadeMeshTools.cpp  ChCascadeMeshTools.h  ChCascadeShapeAsset.cpp  ChCascadeShapeAsset.h  ChCascadeTriangulate.h  ChCascadeVisualShape.cpp  ChCascadeVisualShape.h  ChIrrCascade.h  ChIrrCascadeMeshTools.h  ChVisualShapeCascade.cpp  ChVisualShapeCascade.h
src/chrono_cosimulation/: CMakeLists.txt  ChApiCosimulation.h  ChCosimulation.cpp  ChCosimulation.h  ChExceptionSocket.h  ChHostInfo.cpp  ChHostInfo.h  ChSocket.cpp  ChSocket.h  ChSocketFramework.cpp  ChSocketFramework.h
src/chrono_csharp/: CMakeLists.txt  ChApiCsharp.h  ChAssembly.i  ChBody.i  ChBodyFrame.i  ChChronoCsharp.h  ChCollisionInfo.i  ChColor.i  ChContactContainer.i  ChFunction_Base.i  ChGeometry.i  ChLink.i  ChLinkBase.i  ChLinkDistance.i  ChLinkLock.i  ChLinkMarkers.i  ChLinkMate.i  ChLinkMotor.i  ChLinkRSDA.i  ChLinkTSDA.i  ChLinkTSDA.i.bak  ChLinkTrajectory.i  ChLoad.i  ChMaterialSurface.i  ChMatrix.i  ChMatrix33.i  ChModuleCore.i  ChPhysicsItem.i  ChProximityContainer.i  ChQuaternion.i  ChRealtimeStep.i  ChShaft.i  ChSolver.i  ChStream.i  ChSystem.i  ChTensors.i  ChTexture.i  ChTimestepper.i  ChVector.i  chrono_downcast.i
src/chrono_dem/: CMakeLists.txt  ChApiDem.h  ChConfigDem.h.in  ChDemDefines.h
src/chrono_distributed/: CMakeLists.txt  ChApiDistributed.h  ChConfigDistr.h.in  ChDataManagerDistr.cpp  ChDataManagerDistr.h  ChDistributedDataManager.cpp  ChDistributedDataManager.h  other_types.h
src/chrono_fea/: CMakeLists.txt  ChApiFEA.h  ChBeamSection.cpp  ChBeamSection.h  ChBeamSectionCosserat.cpp  ChBeamSectionCosserat.h  ChBeamSectionTimoshenko.cpp  ChBeamSectionTimoshenko.h  ChBuilderBeam.cpp  ChBuilderBeam.h  ChContactSurface.cpp  ChContactSurface.h  ChContactSurfaceMesh.cpp  ChContactSurfaceMesh.h  ChContactSurfaceNodeCloud.cpp  ChContactSurfaceNodeCloud.h  ChContinuumElectrostatics.h  ChContinuumPoisson3D.h  ChContinuumThermal.h  ChElement3D.h  ChElementBar.cpp  ChElementBar.h  ChElementBase.h  ChElementBeam.h  ChElementBeamANCF.cpp  ChElementBeamANCF.h  ChElementBeamEuler.h  ChElementBeamIGA.h  ChElementBrick.cpp  ChElementBrick.h  ChElementBrick_9.cpp  ChElementBrick_9.h  ChElementCableANCF.h  ChElementCorotational.h  ChElementGeneric.cpp  ChElementGeneric.h  ChElementHexa_20.cpp  ChElementHexa_20.h  ChElementHexa_8.cpp  ChElementHexa_8.h  (+74 more)
src/chrono_flow/: CMakeLists.txt  ChContinuumHydroThermal2D.h  ChContinuumPoisson2D.h  ChContinuumPoissonFlow3D.h  ChElementSpringP.cpp  ChElementSpringP.h  ChElementSpringPPP.cpp  ChElementSpringPPP.h  ChFlow3D.h  ChFlowApi.h  ChMeshFileLoaderBeam.cpp  ChMeshFileLoaderBeam.h  ChNodeFEAxyzPP.cpp  ChNodeFEAxyzPP.h  ChNodeFEAxyzPPP.cpp  ChNodeFEAxyzPPP.h
src/chrono_fmi/: CMakeLists.txt  ChApiFMI.h  ChChronoFMI.h  ChConfigFMI.h.in  ChExternalFmu.cpp  (+4 more)
template_project/: CMakeLists.txt  my_example.cpp
template_project_csharp/: CMakeLists.txt  main.cs
template_project_fmi2/: CMakeLists.txt  FmuComponentChrono.cpp  FmuComponentChrono.h  demo_FmuComponentChrono.cpp
template_project_fmu/: CMakeLists.txt  FmuComponentChrono.cpp  FmuComponentChrono.h  fmu_host.cpp  myFmuComponentChrono.cpp  myFmuComponentChrono.h
template_project_multifmu/: CMakeLists.txt
template_project_new/: CMakeLists.txt  demo_FEA_cablesMKL.cpp  demo_FSI_Poiseuille_flow.cpp  demo_FSI_WaveTank.cpp  demo_GPU_mixer.cpp  demo_MCORE_ballsNSC.cpp  demo_MCORE_cratering_OpenGL.cpp  demo_PARSER_Python.cpp  demo_ROBOT_RoboSimian_Granular.cpp  demo_SEN_Gator.cpp  demo_SYN_copter.cpp  demo_VEH_CRGTerrain_IRR.cpp  demo_VEH_RenderJSON_VSG.cpp  demo_VEH_TrackTestRig.cpp  granular.cpp  granular.h  my_example.cpp
template_project_ros/: CMakeLists.txt  custom_handler.cpp
template_project_vehicle_cosim/: CMakeLists.txt  vehicle_cosim.cpp
(+15017 files in other folders)
